# xarray_time_indexing

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest_run.yml
src/xarray_time_index/: __init__.py
src/xarray_time_indexing/: __init__.py  accessors.py  config.py  core.py
tests/: test_integration.py  test_time_coordinate_switiching.py  test_timezone.py  util_testing.py
